api-gw/nginx/cmbc/f5-manage01/3.1.1/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: f5-manage01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: cloudadc/cafe:1.5
        ports:
        - containerPort: 8080
        #resources:
        #  requests:
        #    cpu: "100m"
        #    memory: "128Mi"
        #  limits:
        #    cpu: "1"
        #    memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: f5-manage01
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  namespace: f5-manage01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: cloudadc/cafe:1.5
        ports:
        - containerPort: 8080
        #resources:
        #  requests:
        #    cpu: "100m"
        #    memory: "128Mi"
        #  limits:
        #    cpu: "1"
        #    memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: f5-manage01
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
