api-gw/nginx/cmbc/f5-manage01/3.1.1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-3-1-1
  namespace: f5-manage01
spec:
  ingressClassName: nginx
  rules:
  - host: f5manage01.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
